[package]
name = "alias_editor_plugin"
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "alias_editor_plugin"

[dependencies]
# Plugin API
plugin_editor_api = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "35e16c0258e751a74875d458abcb3b8ffb3cf45e" }

# UI dependencies
gpui = { git = "https://github.com/tristanpoland/zed", rev="2047043a00dc138e3d8127c8921c96927acea8f8", features = ["runtime_shaders", "macos-blade"] }
ui = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "35e16c0258e751a74875d458abcb3b8ffb3cf45e" }
ui_common = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "35e16c0258e751a74875d458abcb3b8ffb3cf45e" }
ui_types_common = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "35e16c0258e751a74875d458abcb3b8ffb3cf45e" }

# Engine dependencies
engine_state = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "35e16c0258e751a74875d458abcb3b8ffb3cf45e" }
pulsar_std = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "35e16c0258e751a74875d458abcb3b8ffb3cf45e" }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async operations
futures = "0.3"
anyhow = "1.0"
