[package]
name = "alias_editor_plugin"
version = "0.1.4"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "alias_editor_plugin"

[dependencies]
# Plugin API
plugin_editor_api = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "b4c5800238177bd9eb1ad8b110e37ea9d3b338f2" }

# UI dependencies
gpui = { git = "https://github.com/tristanpoland/zed", rev="2047043a00dc138e3d8127c8921c96927acea8f8", features = ["runtime_shaders", "macos-blade"] }
ui = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "b4c5800238177bd9eb1ad8b110e37ea9d3b338f2" }
ui_common = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "b4c5800238177bd9eb1ad8b110e37ea9d3b338f2" }
ui_types_common = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "b4c5800238177bd9eb1ad8b110e37ea9d3b338f2" }

# Engine dependencies
engine_state = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "b4c5800238177bd9eb1ad8b110e37ea9d3b338f2" }
pulsar_std = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "b4c5800238177bd9eb1ad8b110e37ea9d3b338f2" }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async operations
futures = "0.3"
anyhow = "1.0"
